fix: Restore css code that prevents layout shift of filters in collapse

--- a/src/components/aftersearch-nav/aftersearch-nav.scss
+++ b/src/components/aftersearch-nav/aftersearch-nav.scss
@@ -217,6 +217,15 @@ $aftersearch-nav--horizontal_rows: (
         padding: 0;
         margin: 0;
         overflow: hidden;
+        height: 0; // Prevent layout shift before collapse widget initialization
+
+        &[aria-hidden] {
+            height: auto; // Initialized collapse widget is recognized by additional aria-hidden attribute
+        }
+
+        .#{$ns}offcanvas-filters & {
+            height: auto;
+        }
 
         @include media('>=tablet') {
             height: auto;
